--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     Red: Incorrect<br>
     Orange: Hint Used<br>
     Gray: Correct<br>
-    Yellow: Check the Suffix!<br>
-    Prismatic: Ultra-Hard Mode
+    Prismatic: Ultra-Hard Mode<br>
+    Yellow: Suffix Warning
   </div>
   <button id="login-btn">Login with Google</button>
   <button id="logout-btn">Logout</button>
@@ -52,7 +52,7 @@
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 const supabase = createClient(
   'https://yulvzmznvnctgaiwuypb.supabase.co',
-  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl1bHZ6bXpudm5jdGdhaXd1eXBiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIyNzEzNjMsImV4cCI6MjA2Nzg0NzM2M30.7LOh2rqTkdB4oNJuFTd5o9snzX9dA7AOkmt7y9prQgM'
+  'eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl1bHZ6bXpudm5jdGdhaXd1eXBiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIyNzEzNjMsImV4cCI6MjA2Nzg0NzM2M30.7LOh2rqTkdB4oNJuFTd5o9snzX9dA7AOkmt7y9prQgM'
 );
 
 import { roadNameToIds } from './roadNameToIds.js';
@@ -61,42 +61,12 @@ let nameToLayers = {};
 let guessedSegmentIds = new Set();
 let currentUserId = null;
 let segmentStateMap = new Map(); // road_id => { correct, used_hint }
-
-const suffixMap = {
-  ave: 'avenue',
-  st: 'street',
-  rd: 'road',
-  blvd: 'boulevard',
-  ln: 'lane',
-  ct: 'court',
-  cir: 'circle',
-  dr: 'drive',
-  pike: 'pike',
-  hwy: 'highway',
-  tpke: 'turnpike',
-  ter: 'terrace',
-  sq: 'square',
-  pl: 'place',
-  way: 'way',
-  ext: 'extension'
-};
-
-function normalizeName(name) {
-  if (!name) return '';
-  let words = name.trim().toLowerCase().split(/\s+/);
-  if (words.length > 1) {
-    let last = words[words.length - 1];
-    words[words.length - 1] = suffixMap[last] || last;
-  }
-  return words.join(' ');
-}
+let roadAttemptCounts = new Map(); // road name => number of attempts
 
 document.getElementById('login-btn').onclick = async () => {
   const { error } = await supabase.auth.signInWithOAuth({
     provider: 'google',
-    options: {
-      redirectTo: window.location.origin
-    }
+    options: { redirectTo: window.location.origin }
   });
   if (error) alert('Login error: ' + error.message);
 };
@@ -146,41 +116,26 @@ async function loadGuessedSegmentIds() {
   });
 }
 
-async function saveGuessSegmentIds(roadName, isCorrect, usedHint = false) {
+async function logGuessToSupabase(roadName, isCorrect, usedHint = false) {
   const ids = roadNameToIds[roadName] || [];
-
   for (const id of ids) {
     const stringId = String(id);
     const existing = segmentStateMap.get(stringId);
 
-    if (!existing) {
-      const { error } = await supabase.from('road_guesses').insert([{
-        user_id: currentUserId,
-        road_id: stringId,
-        road_name: roadName,
-        correct: isCorrect,
-        used_hint: usedHint
-      }]);
-      if (!error) {
-        guessedSegmentIds.add(stringId);
-        segmentStateMap.set(stringId, { correct: isCorrect, used_hint: usedHint });
-        console.log('Inserted new guess:', { road_name: roadName, correct: isCorrect, used_hint: usedHint });
-      } else {
-        console.error('Insert error:', error);
-      }
-    } else if (isCorrect && !existing.correct) {
-      const { error } = await supabase
-        .from('road_guesses')
-        .update({ correct: true, used_hint: usedHint })
-        .eq('user_id', currentUserId)
-        .eq('road_id', stringId);
+    const { error } = await supabase.from('road_guesses').insert([{
+      user_id: currentUserId,
+      road_id: stringId,
+      road_name: roadName,
+      correct: isCorrect,
+      used_hint: usedHint
+    }]);
 
-      if (!error) {
-        segmentStateMap.set(stringId, { correct: true, used_hint: usedHint });
-        console.log('Updated guess to correct:', { road_name: roadName });
-      } else {
-        console.error('Update error:', error);
-      }
+    if (!error) {
+      guessedSegmentIds.add(stringId);
+      segmentStateMap.set(stringId, { correct: isCorrect, used_hint: usedHint });
+      console.log('Logged guess:', { road_name: roadName, correct: isCorrect, used_hint: usedHint });
+    } else {
+      console.error('Insert error:', error);
     }
   }
 }
@@ -190,6 +145,23 @@ function applyColorToAllSegments(name, color) {
   for (const l of nameToLayers[name]) {
     l.setStyle({ color });
   }
+}
+
+function normalizeSuffix(str) {
+  const suffixMap = {
+    ave: 'avenue', st: 'street', rd: 'road', blvd: 'boulevard',
+    ln: 'lane', dr: 'drive', ct: 'court', cir: 'circle', hwy: 'highway',
+    pike: 'pike', pl: 'place', trl: 'trail', way: 'way'
+  };
+  return str.split(' ').map(word => {
+    const w = word.toLowerCase();
+    return suffixMap[w] || word;
+  }).join(' ');
+}
+
+function isSuffixOnlyMismatch(userGuess, actualName) {
+  const normalize = s => s.toLowerCase().split(' ').slice(0, -1).join(' ');
+  return normalize(userGuess) === normalize(actualName);
 }
 
 async function loadMap() {
@@ -222,40 +194,40 @@ async function loadMap() {
             layer.setStyle({ color: 'black', weight: 6 });
           }
 
-          let attempts = 0;
+          roadAttemptCounts.set(name, 0); // initialize
 
           layer.on('click', async function () {
-            let userGuess = prompt("Guess the name of this road:");
-            if (!userGuess) return;
+            const attempts = roadAttemptCounts.get(name) || 0;
 
-            const normalizedGuess = normalizeName(userGuess);
-            const normalizedActual = normalizeName(name);
+            if (attempts < 3) {
+              const guess = prompt("Guess the name of this road:");
+              if (!guess) return;
 
-            if (normalizedGuess === normalizedActual) {
-              if (attempts >= 3) {
-                applyColorToAllSegments(name, 'orange');
-                await saveGuessSegmentIds(name, true, true);
-              } else {
+              const userNorm = normalizeSuffix(guess);
+              const actualNorm = normalizeSuffix(name);
+
+              if (userNorm === actualNorm) {
                 applyColorToAllSegments(name, 'gray');
-                await saveGuessSegmentIds(name, true, false);
+                await logGuessToSupabase(name, true, false);
+                layer.off('click');
+                alert("Correct!");
+              } else if (isSuffixOnlyMismatch(guess, name)) {
+                applyColorToAllSegments(name, 'yellow');
+                alert("Almost! Check the suffix.");
+              } else {
+                roadAttemptCounts.set(name, attempts + 1);
+                applyColorToAllSegments(name, 'red');
+                await logGuessToSupabase(name, false, false);
+                alert("Incorrect. Try again.");
               }
-              layer.off('click');
-              alert("Correct!");
-            } else if (
-              normalizedGuess.split(" ").slice(0, -1).join(" ") ===
-              normalizedActual.split(" ").slice(0, -1).join(" ")
-            ) {
-              applyColorToAllSegments(name, 'yellow');
-              alert("Almost! Check the suffix.");
-              // Not saved to Supabase
+
             } else {
-              attempts += 1;
-              const color = attempts >= 3 ? 'orange' : 'red';
-              applyColorToAllSegments(name, color);
-              if (attempts === 1) {
-                await saveGuessSegmentIds(name, false, false);
-              }
-              alert("Incorrect. Try again.");
+              // 4th attempt — force hint
+              const hintLetter = name[0].toUpperCase();
+              alert(`Here's a hint: Road begins with "${hintLetter}"`);
+              applyColorToAllSegments(name, 'orange');
+              await logGuessToSupabase(name, true, true);
+              layer.off('click');
             }
           });
         }
@@ -272,3 +244,4 @@ loadMap();
 </script>
 </body>
 </html>
+
